# clean-my-keys

./: Cargo.toml  README.md  clean-my-keys.desktop
.github/workflows/: release.yml
src/: application.rs  devices.rs  fonts.rs  main.rs  theme.rs
src/appearance/: fonts.rs  theme.rs
src/core/: config.rs  device.rs  logging.rs  mod.rs  permission.rs
src/core/device/: mod.rs
