[package]
name = "clean-my-keys"
version = "1.2.1"
edition = "2024"

[dependencies]
iced = "0.14.0"
image = "0.25.10"

[profile.release]
opt-level = 'z'
strip = true
lto = true

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
karen = "0.1.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input"] }
winapi = { version = "0.3", features = ["winuser"] }